feat: Se definen los métodos de list y create en openApi
Además, se han unificado las url para mejorar su entendimiento y legibilidad en la documentación.
