# backend/openApi.yml
@@ -6,25 +6,45 @@ info:
 servers:
   - url: https://localhost:8000/
 paths:
-  # TODO: Hacer list y post
-  # /asset:
-  #   get:
-  #     summary: "Devuelve el listado de imágenes de la base de datos"
-  #     responses:
-  #       '200':
-  #         description: Todo ha ido correctamente
-  #   post:
-  #     summary: "Añade una nueva imágen a la base de datos"
-  #     responses:
-  #       '200':
-  #         description: Todo ha ido correctamente
+
+  /asset:
+     get:
+       summary: "Devuelve el listado de imágenes de la base de datos"
+       responses:
+        '200':
+          description: Todo ha ido correctamente
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/assets"
+     post:
+       summary: "Añade una nueva imágen a la base de datos"
+       requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/createModifyAsset"
+       responses:
+         '200':
+           description: Todo ha ido correctamente
+           content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/successful"
+         "405":
+            description: "Datos de entrada no válidos"
+            content:
+             application/json:
+              schema:
+                $ref: "#/components/schemas/notValid"
 
   /asset/{id}:
     get:
       parameters:
       - Schema:
         $ref: "#/components/parameters/paramId"
-      summary: "Devuelve el listado de imágenes de la base de datos"
+      summary: "Devuelve la imagen requerida de la base de datos"
       responses:
         '200':
           description: Todo ha ido correctamente
@@ -62,7 +82,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/successfull"
+                $ref: "#/components/schemas/successful"
         "400":
           description: "El id de la imagen no es válido"
           content:
@@ -90,7 +110,7 @@ components:
     paramId:
       type: string
       description: Id de la imagen
-    successfull:
+    successful:
       type: string
       description: La operación se ha realizado correctamente
     notFound:
@@ -135,3 +155,29 @@ components:
         __v:
           type: integer
           description: Versión de la imagen
+    assets:
+      type: array
+      items:
+        type: object
+        properties:
+          _id:
+            type: string
+            description: Id de la imagen almacenado en la BD
+          file:
+            type: string
+            description: URL de la imagen almacenada en Google Images
+          name:
+            type: string
+            description: Nombre de la imagen
+          user:
+            type: string
+            description: Usuario al que pertenece la imagen
+          createdAt:
+            type: string
+            description: Fecha de creación de la imagen en la BD
+          updatedAt:
+            type: string
+            description: Fecha de actualización de la imagen en la BD
+          __v:
+            type: integer
+            description: Versión de la imagen
